# whisky

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  start.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260117_000001_initial_distillery_and_reference_whisky.py  20260117_000002_add_users_table.py  20260117_000003_add_bottles_table.py  20260117_000004_add_wishlist_table.py
backend/src/: __init__.py  config.py  logging.py  main.py
backend/src/api/: __init__.py  auth.py  bottles.py  deps.py  distilleries.py  health.py  pagination.py  profile.py  whiskies.py  wishlist.py
backend/src/db/: __init__.py  engine.py
backend/src/middleware/: error_handler.py  logging.py  rate_limit.py
backend/src/models/: __init__.py  base.py  bottle.py  distillery.py  reference_whisky.py  user.py  wishlist.py
backend/src/schemas/: __init__.py  auth.py  bottle.py  constants.py  distillery.py  enums.py  flavor_profile.py  reference_whisky.py  wishlist.py
backend/src/seed/: __init__.py  run_seed.py
backend/src/services/: auth.py  bottle.py  distillery.py  jwt.py  matching.py  profile.py  reference_whisky.py  wishlist.py
backend/tests/: conftest.py
backend/tests/contract/: test_auth_contract.py  test_bottles_contract.py  test_collection_contract.py  test_distilleries_contract.py  test_similarity_contract.py  test_whiskies_contract.py  test_wishlist_contract.py
backend/tests/integration/: test_auth.py  test_bottle_crud.py  test_bottles.py  test_collection.py  test_distilleries.py  test_health.py  test_profile.py  test_recommendations.py  test_similar.py  test_whiskies.py  test_wishlist.py
backend/tests/unit/: test_auth_service.py  test_bottle_service.py  test_collection_service.py  test_matching_service.py
data/: distilleries.json  whiskies.json
docs/adr/: 001-tech-stack.md
docs/runbooks/: database-migration.md  deployment.md  seed-data-update.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: BottleForm.tsx  ErrorBoundary.tsx  FlavorProfileInput.tsx  Layout.tsx  LoadingSpinner.tsx  ProtectedRoute.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: AddBottle.tsx  BottleDetail.tsx  Collection.tsx  Distilleries.tsx  DistilleryDetail.tsx  EditBottle.tsx  Login.tsx  Register.tsx  Wishlist.tsx
frontend/src/services/: api.ts
specs/001-whisky-collection-tracker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-whisky-collection-tracker/checklists/: requirements.md
specs/001-whisky-collection-tracker/contracts/: openapi.yaml
whisky/.specify/memory/: constitution.md
