[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisky-collection-tracker"
version = "0.1.0"
description = "Personal whisky collection management API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Whisky Tracker Team"}
]
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "sqlalchemy[asyncio]==2.0.46",
    "asyncpg==0.31.0",
    "alembic==1.18.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-jose[cryptography]==3.5.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.2.1",
    "python-multipart==0.0.22",
    "structlog==25.5.0",
    "httpx==0.28.1",
    "email-validator==2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "httpx==0.28.1",
    "ruff==0.14.14",
    "mypy==1.19.1",
    "types-passlib==1.7.7.20250602",
    "types-python-jose==3.5.0.20250531",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "silent"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
branch = true
concurrency = ["greenlet", "thread"]
omit = ["*/tests/*", "*/__pycache__/*", "src/seed/*", "src/schemas/constants.py", "src/logging.py", "src/db/engine.py", "src/main.py", "src/middleware/error_handler.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
fail_under = 80
